<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/filtersFragment">

    <fragment
        android:id="@+id/tripPickerFragment"
        android:name="com.example.kierowca2.screens.TripPickerFragment"
        android:label="@string/title_trip_picker"
        tools:layout="@layout/fragment_trip_picker">
        <argument
            android:name="route_id"
            app:argType="string" />
        <argument
            android:name="direction_id"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="variant_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
        <argument
            android:name="brigade_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
        <argument
            android:name="vehicle_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
        <argument
            android:name="service_id"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="null" />
        <action
            android:id="@+id/action_tripPicker_to_routeMapFragment"
            app:destination="@id/routeMapFragment" />
    </fragment>

    <fragment
        android:id="@+id/routeMapFragment"
        android:name="com.example.kierowca2.screens.RouteMapFragment"
        android:label="@string/title_route_map"
        tools:layout="@layout/fragment_route_map">
        <argument
            android:name="trip_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/importFragment"
        android:name="com.example.kierowca2.screens.ImportFragment"
        android:label="@string/title_import"
        tools:layout="@layout/fragment_import" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.kierowca2.screens.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_logs"
            app:destination="@id/logsFragment" />
    </fragment>

    <fragment
        android:id="@+id/filtersFragment"
        android:name="com.example.kierowca2.screens.FiltersFragment"
        android:label="@string/title_filters"
        tools:layout="@layout/fragment_filters">
        <action
            android:id="@+id/action_filters_to_tripPicker"
            app:destination="@id/tripPickerFragment" />
    </fragment>

    <fragment
        android:id="@+id/logsFragment"
        android:name="com.example.kierowca2.screens.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />

</navigation>
